--- a/labs/08-net/wiki/get-a-life.wiki
+++ b/labs/08-net/wiki/get-a-life.wiki
@@ -32,50 +32,55 @@ la această adresă: https://www.coindesk.com/api/.
 (''Hint:'' ''RON'' reprezintă codul valid conform ISO 4217 al monedei naționale)
 
 
-==== 3. Cheie cu permisuni eronate ====
+==== 3. Montarea/Demontarea unui sistem de fișiere la distanță ====
 
-TODO
+**[3a]** Instalați pe mașina virtuală ''USO'' utilitarul ''sshfs''.
 
-==== 4. Montarea/Demontarea unui sistem de fișiere la distanță ====
+**[3b]** Creați un director nou pe mașina virtuală ''USO'' cu denumirea ''tom_fs''.
 
-**[4a]** Instalați pe mașina virtuală ''USO'' utilitarul ''sshfs''.
+**[3c]** Montați directorul ''/home/student'' de pe mașina virtuală ''tom'' pe mașina virtuală ''USO'' folosind directorul creat la **[3b]**.
 
-**[4b]** Creați un director nou pe mașina virtuală ''USO'' cu denumirea ''tom_fs''.
+**[3d]** De pe mașina virtuală ''USO'' adăugați un fișier nou în directorul ''tom_fs''. Observați apariția fișierului creat pe mașina virtuală ''tom''.
 
-**[4c]** Montați directorul ''/home/student'' de pe mașina virtuală ''tom'' pe mașina virtuală ''USO'' folosind directorul creat la **[4b]**.
+**[3e]** Demontați sistemul de fișiere. (**Hint**: comanda ''umount'')
 
-**[4d]** De pe mașina virtuală ''USO'' adăugați un fișier nou în directorul ''tom_fs''. Observați apariția fișierului creat pe mașina virtuală ''tom''.
+==== 4. Utilizarea unei cheissh cu passphrase ====
 
-**[4e]** Demontați sistemul de fișiere. (**Hint**: comanda ''umount'')
+**[4a]** Creați un director nou în directorul ''home'' al utilizatorului ''student'' cu denumirea ''04_key''.
 
-==== 5. Cheie ssh cu passphrase ====
+**[4b]** Genenerați o nouă pereche de chei ''rsa'' în directorul pe care l-ați creat la subpunctul anterior..
+Asigurați-vă că folosiți un passphrase nevid. (''Hint: ssh-keygen'')
 
-TODO
+**[4c]** Faceți modificările necesare pentru a putea folosi această cheie pentru conexiunile viitoare. (''Hint: chmod'')
 
-==== 6. Utilizarea VNC între stații ====
+
+==== 5. Utilizarea VNC între stații ====
 
 <note>
 La acest exercițiu veți lucra împreună cu un coleg. Veți juca, pe rând, unul
 dintre rolurile server/client.
 </note>
 
-**[6a]** Aflați ambele adrese ale stațiilor pe care lucrați și stabiliți rolurile
+**[5a]** Aflați ambele adrese ale stațiilor pe care lucrați și stabiliți rolurile
 inițiale.
 
-**[6b]** Folosind utilitarul GUI ''Remmina'' din Ubuntu, ''client-ul'' se va
+**[5b]** Folosind utilitarul GUI ''Remmina'' din Ubuntu, ''client-ul'' se va
 conecta la ''server''.
 
-**[6c]** Inversați rolurile și repetați task-ul **[6b]**. (''Hint:'' Nu rămâneți
+**[5c]** Inversați rolurile și repetați task-ul **[6b]**. (''Hint:'' Nu rămâneți
 prinși în recursivitate).
 
-==== 7. Instalarea unui server web Apache2 ====
+==== 6. Instalarea unui server web Apache2 ====
 
-**[7a]** Asigurați-vă că aveți instalat un server web Apache2.
-**[7b]** Porniți serverul web.
-**[7c]** Verificați funcționalitatea serverului web utilizând browserul web
+**[6a]** Asigurați-vă că aveți instalat un server web Apache2.
+
+**[6b]** Porniți serverul web.
+
+**[6c]** Verificați funcționalitatea serverului web utilizând browserul web
 preferat.
 
-==== 8. Instalarea unei aplicații web ====
+==== 7. Instalarea unei aplicații web ====
 
-**[8a]** Instalați aplicația web ''DokuWiki''. (''Hint:'' https://www.dokuwiki.org/install)
-**[8b]** Testați funcționalitatea.
+**[7a]** Instalați aplicația web ''DokuWiki''. (''Hint:'' https://www.dokuwiki.org/install)
+
+**[7b]** Testați funcționalitatea.
