--- a/labs/02-process/wiki/demo.wiki
+++ b/labs/02-process/wiki/demo.wiki
@@ -99,7 +99,7 @@ student@uso:~$ jobs
 [1]+  Stopped                 sleep 100
 </code>
 
-Am folosit utilitarul ''jobs'' pentru a vedea ce procese sunt active în terminalul curent. De aici putem folosi **bg** (background) pentru a porni procesul în mod neinteractiv sau **fg** (foreground) pentru a porni procesul în mode interactiv. Mai simplu, la ''bg'' putem da alte comenzi în timp ce programul nostru rulează, iar la ''fg'' nu putem să dăm alte comenzi.
+Am folosit utilitarul ''jobs'' pentru a vedea ce procese sunt active în terminalul curent. De aici putem folosi **bg** (background) pentru a porni procesul în mod interactiv sau **fg** (foreground) pentru a porni procesul în mod neinteractiv. Mai simplu, la ''bg'' putem da alte comenzi în timp ce programul nostru rulează, iar la ''fg'' nu putem să dăm alte comenzi.
 
 === Semnale (kill) ===
 
@@ -126,7 +126,6 @@ student@uso:~$ jobs
 
 === Redirectare ===
 
-În continuare vom folosi operatori de redirectare **>**, **<**, **>>**, **|**.
 Pentru a redirecta lista proceselor într-un fișier, folosim următoarea comandă:
 
 <code bash>
@@ -134,7 +133,13 @@ student@uso:~$ ps aux > procese.txt
 </code>
 
 Astfel, am specificat procesului să nu mai afișeze rezultatul pe ecran, ci într-un fișier. Diferența între **>** și **>>** este că primul înlocuiește conținutul fișierului **procese.txt**, pe când al2lea adaugă la sfârșitul fișierului.
+Astfel, executând a2a oară comanda:
 
+<code bash>
+student@uso:~$ ps aux > procese.txt
+</code>
+
+Vom avea în fișierul ''procese.txt'' afișat de 2 ori ieșirea comenzii.
 
 === Comunicare interprocese, folosind **|** ===
 
