--- a/labs/02-process/wiki/concepts.wiki
+++ b/labs/02-process/wiki/concepts.wiki
@@ -1,10 +1,9 @@
 ===== Concepte =====
 
-Procesul este entitatea dintr-un sistem de opera
 
 ==== Vizualizarea proceselor din sistem (ps, pstree, top, htop) ====
 
-Ierarhia de procese în formă arborescentă putem vizualiza folosind pstree (similar cu tree de la sistemul de fișiere)
+Ierarhia de procese în Linux este sub formă arborescentă; putem vizualiza folosind pstree (similar cu tree de la sistemul de fișiere)
 
 Folosind ''ps'' fără nici un parametru vizualizăm procesele din shell-ul curent asociate utilizatorului curent.
 
@@ -38,9 +37,12 @@ student@uso:~$ htop
 ==== Atributele unui proces ====
 
 Procesul este identificat în sistem cu ajutorul unui număr numit **PID** (process ID). Acesta este unic în sistem. Atunci când un proces este creat, se asignează un PID nou, următorul crescător liber.
+
 Un alt atribut important este PID-ul procesului părinte, **PPID**. Având o structură ierarhică, toate procesele au un părinte, părintele tuturor fiind **init** sau **systemd** (în funcție de sistem) și are PID-ul 1. 
+
 Atributul **COMMAND** ne spune numele procesului sau comanda cu care a fost creat:
 <code bash>
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
 student  23176  0.0  0.1  46012  3644 pts/0    R+   22:06   0:00 ps aux
 </code>
 
@@ -50,9 +52,9 @@ Pentru o listă completă de atribute, verificați **manualul**.
 ==== Foreground & Background (&, fg, bg, jobs) ====
 
 Există mai multe stări în care un proces se poate afla:
-1. Starea în care rulează 
-2. Starea în care este oprit: se folosește **Ctrl+Z**
-3. Starea în care este terminat (procesul nu mai există): se folosește **Ctrl+C**
+    - Starea în care rulează 
+    - Starea în care este oprit: se folosește **Ctrl+Z**
+    - Starea în care este terminat (procesul nu mai există): se folosește **Ctrl+C**
 
 Apăsând o combinație de taste din cele de mai sus, trimitem un semnal procesului:
 
@@ -65,13 +67,13 @@ Apăsând o combinație de taste din cele de mai sus, trimitem un semnal procesu
 
 ==== Semnale (kill) ====
 
-Un utilizator poate trimite un semnal unui proces folosind comanda kill! Este foarte important să înțelegem că nu este scopul principal omorârea de procese folosind kill. O listă a tuturor semnalelor posibile ce pot fi trimise aflăm prin
+Un utilizator poate trimite un semnal unui proces folosind comanda kill! Este foarte important să înțelegem că scopul principal al utilitarului nu este omorârea de procese, deși poate face și asta. O listă a tuturor semnalelor posibile ce pot fi trimise aflăm prin
 
 <code bash>
 student@uso:~$ kill -l   
 </code>
 
-Utilitarele **pkill** și **killall** termină procesele folosind ca argument **numele** procesului și nu PID-ul (ca la **kill*).
+Utilitarele **pkill** și **killall** termină procesele folosind ca argument **numele** procesului și nu PID-ul (ca la **kill**).
 
 ==== Redirectare (>, >>, <, |) ====
 
@@ -93,7 +95,7 @@ student@uso:~$ grep "Disable" < vm-actions-log.txt
 * Disable automated screen locking:
 </code>
 
-==== Comunicarea interprocese, folosind pipe **|** ====
+==== Comunicarea interprocese, folosind pipe | ====
 Operatorul **|** este foarte important și uzual folosit. Acesta ia rezultatul primei comenzi și îl oferă ca intrare la a2a comandă. Câteva exemple:
 
 <code bash>
