--- a/labs/02-process/wiki/demo.wiki
+++ b/labs/02-process/wiki/demo.wiki
@@ -124,6 +124,9 @@ student@uso:~$ jobs
 [1]+  Killed                  sleep 100
 </code>
 
+Am transmis semnalul 9 (SIGKILL) procesului 22286, iar acesta a fost terminat instant.
+
+
 === Redirectare ===
 
 Pentru a redirecta lista proceselor într-un fișier, folosim următoarea comandă:
@@ -141,7 +144,7 @@ student@uso:~$ ps aux > procese.txt
 
 Vom avea în fișierul ''procese.txt'' afișat de 2 ori ieșirea comenzii.
 
-=== Comunicare interprocese, folosind **|** ===
+=== Comunicare interprocese, folosind | ===
 
 Operatorul **|** este foarte important și uzual folosit. Acesta ia rezultatul primei comenzi și îl oferă ca intrare la a2a comandă. Câteva exemple:
 
