--- a/labs/02-process/wiki/recap.wiki
+++ b/labs/02-process/wiki/recap.wiki
@@ -1,4 +1,4 @@
 ===== Recapitulare =====
 
-1a. Afișați recursiv, pornind din directorul ''uso.git'', toate fișiere și directoarele. Puteți alege oricare din variantele învățate anterior.
-1b. Creați o arhivă cu fișierele menționate mai sus.
+    - Afișați recursiv, pornind din directorul ''uso.git'', toate fișiere și directoarele. Puteți alege oricare din variantele învățate anterior.
+    - Creați o arhivă cu fișierele menționate mai sus.
